<resources>
    <string name="app_name">HARGA MOBIL HONDA</string>
    <string name="namamobil">Nama Mobil</string>
    <string name="seri">Seri</string>
    <string name="seri_mockup">A3</string>
    <string name="rating">Rating</string>
    <string name="rating_mockup">4.10 / 5</string>
    <string name="tahun">Tahun</string>
    <string name="tahun_mockup">2021</string>
    <string name="harga">Harga</string>
    <string name="harga_mockup">Rp.340.000.000</string>
    <string name="keterangan">Tentang Mobil</string>
    <string name="keterangan_mockup">Lorem Ipsum Dolor Sit amet</string>
    <string-array name="datanamamobil">
        <item>BRIO</item>
        <item>BRIO</item>
        <item>BRIO</item>
        <item>HRV</item>
        <item>HRV</item>
        <item>BRV</item>
        <item>CRV</item>
        <item>CRV</item>
        <item>CRV</item>
        <item>CIVIC</item>
        <item>CIVIC</item>
        <item>Mobilio</item>
        <item>Mobilio</item>
        <item>ODYSSEY</item>
        <item>ACCORD</item>
        <item>CITY</item>
        <item>CITY</item>
    </string-array>
    <string-array name="datatahun">
        <item>2021</item>
        <item>2021</item>
        <item>2021</item>
        <item>2021</item>
        <item>2021</item>
        <item>2021</item>
        <item>2021</item>
        <item>2021</item>
        <item>2021</item>
        <item>2021</item>
        <item>2021</item>
        <item>2021</item>
        <item>2021</item>
        <item>2021</item>
        <item>2021</item>
        <item>2021</item>
        <item>2021</item>
    </string-array>
    <string-array name="dataseri">
        <item>RS MT</item>
        <item>Satya S MT</item>
        <item>Satya E CVT</item>
        <item>1.5 E CVT Special Edition</item>
        <item>1.8 CVT Prestige (Two Tone)</item>
        <item>CVT Prestige</item>
        <item>1.5 CVT TURBO</item>
        <item>1.5 CVT TURBO PRESTIGE</item>
        <item>2.0 CVT</item>
        <item>1.5 ES Turbo</item>
        <item>Hatchback 1.5 E CVT Turbo</item>
        <item>RS CVT (Two Tone)</item>
        <item>RS MT (Two Tone)</item>
        <item>2.4L PRESTIGE</item>
        <item>1.5TC EL CVT</item>
        <item>E 1.5 CVT</item>
        <item>E 1.5 MT</item>
    </string-array>
    <string-array name="datarating">
        <item>4.30 / 5</item>
        <item>4.15 / 5</item>
        <item>4.30 / 5</item>
        <item>4.00 / 5</item>
        <item>4.77 / 5</item>
        <item>3.95 / 5</item>
        <item>4.12 / 5</item>
        <item>4.20 / 5</item>
        <item>4.50 / 5</item>
        <item>3.99 / 5</item>
        <item>3.96 / 5</item>
        <item>4.12 / 5</item>
        <item>4.09 / 5</item>
        <item>4.04 / 5</item>
        <item>4.24 / 5</item>
        <item>4.35 / 5</item>
        <item>4.12 / 5</item>

    </string-array>
    <string-array name="dataharga">
        <item>Rp.190.000.000</item>
        <item>Rp.151.000.000</item>
        <item>Rp.175.000.000</item>
        <item>Rp.359.000.000</item>
        <item>Rp.429.000.000</item>
        <item>Rp.298.000.000</item>
        <item>Rp.507.000.000</item>
        <item>Rp.548.000.000</item>
        <item>Rp.473.000.000</item>
        <item>Rp.536.500.000</item>
        <item>Rp.472.000.000</item>
        <item>Rp.266.500.000</item>
        <item>Rp.255.500.000</item>
        <item>Rp.780.700.000</item>
        <item>Rp.734.100.000</item>
        <item>Rp.355.500.000</item>
        <item>Rp.337.000.000</item>


    </string-array>
</resources>